# lrose-core

codebase/apps/ingest/src/: CMakeLists.txt  Makefile
codebase/libs/: CMakeLists.txt  Makefile
codebase/libs/FiltAlg/src/: CMakeLists.txt
codebase/libs/FiltAlgVirtVol/src/: CMakeLists.txt
codebase/libs/Fmq/src/: CMakeLists.txt
codebase/libs/Mdv/src/: CMakeLists.txt
codebase/libs/Ncxx/src/: CMakeLists.txt
codebase/libs/Radx/src/: CMakeLists.txt
codebase/libs/Refract/src/: CMakeLists.txt
codebase/libs/Solo/src/: CMakeLists.txt
codebase/libs/Spdb/src/: CMakeLists.txt
codebase/libs/advect/src/: CMakeLists.txt
codebase/libs/cidd/src/: CMakeLists.txt
codebase/libs/contour/src/: CMakeLists.txt
codebase/libs/dataport/src/: CMakeLists.txt
codebase/libs/didss/src/: CMakeLists.txt
codebase/libs/dsdata/src/: CMakeLists.txt
codebase/libs/dsserver/src/: CMakeLists.txt
codebase/libs/euclid/src/: CMakeLists.txt
codebase/libs/grib/src/: CMakeLists.txt
codebase/libs/grib2/src/: CMakeLists.txt
codebase/libs/hydro/src/: CMakeLists.txt
codebase/libs/kd/src/: CMakeLists.txt
codebase/libs/physics/src/: CMakeLists.txt
codebase/libs/qtplot/src/: CMakeLists.txt
codebase/libs/radar/src/: CMakeLists.txt
codebase/libs/rapformats/src/: CMakeLists.txt
codebase/libs/rapmath/src/: CMakeLists.txt
codebase/libs/rapplot/src/: CMakeLists.txt
codebase/libs/shapelib/src/: CMakeLists.txt
codebase/libs/titan/src/: CMakeLists.txt
codebase/libs/trmm_rsl/: CMakeLists.txt
codebase/libs/trmm_rsl/src/: CMakeLists.txt
(+478 files in other folders)
